...
            source={require('~/shared/assets/png/defaultProfile.png')}
            width={50}
            height={50}
            resizeMode="contain"
            className="rounded-full"
          />
          <Text testID="Information-nickname" className="text-body1 text-foreground">
            {name ?? '사용자'}
          </Text>
        </View>
        <MaterialIcons name="chevron-right" size={24} color={colors['gray-400']} />
      </TouchableOpacity>
    );
...
