...
      description="별칭을 입력해주세요"
      onNext={validateAndNext}
      onBack={handleBack}
      isNextDisabled={nickname?.trim() === ''}>
      <View>
        <Input
          label="별칭"
          placeholder="별칭을 입력해주세요"
          testID="NicknameStep-nickname-input"
          value={nickname as string}
          onChangeText={handleNicknameChange}
          onSubmitEditing={handleSubmit}
          returnKeyType="next"
        />
        <ErrorMessage error={error} />
...
